--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "typecheck": "tsc -b",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|jsx|css|ts|tsx)\"",
     "format": "npm run prettier -- --list-different",
-    "format:write": "npm run prettier -- --write"
+    "format:write": "npm run prettier -- --write",
+    "validate": "run-s typecheck lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.4.2",
@@ -33,6 +35,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "husky": "^8.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1"
   }
